fixed view on mobile

--- a/components/CarouselCard.module.scss
+++ b/components/CarouselCard.module.scss
@@ -11,6 +11,7 @@ $optionDefaultColours: #ED5565, #FC6E51, #FFCE54, #2ECC71, #5D9CEC, #AC92EC;
   transition: 0.25s;
   background: #232223;
   color: white;
+  overflow-y: scroll;
 }
 
 .credit {
@@ -18,6 +19,14 @@ $optionDefaultColours: #ED5565, #FC6E51, #FFCE54, #2ECC71, #5D9CEC, #AC92EC;
   bottom: 20px;
   left: 20px;
   color: inherit;
+}
+
+.scrollHint{
+  text-align: center;
+  font-family:cursive;
+  @media screen and (min-width: 900px) {
+    display: none;
+  }
 }
 
 .options {
@@ -29,8 +38,11 @@ $optionDefaultColours: #ED5565, #FC6E51, #FFCE54, #2ECC71, #5D9CEC, #AC92EC;
   width: calc(100%);
   height: 400px;
 
+  overflow-x: auto;
+
   @media screen and (max-width: 798px) {
     min-width: 520px;
+    
   }
 
   .option {
@@ -65,6 +77,7 @@ $optionDefaultColours: #ED5565, #FC6E51, #FFCE54, #2ECC71, #5D9CEC, #AC92EC;
 
     &.active {
       flex-grow: 10000;
+      min-width: 60px;
       max-width: 600px;
       margin: 0px;
       border-radius: 40px;
@@ -83,6 +96,13 @@ $optionDefaultColours: #ED5565, #FC6E51, #FFCE54, #2ECC71, #5D9CEC, #AC92EC;
           opacity: 1;
         }
       }
+      @media screen and (max-width: 900px ) {
+        min-width: 45vw;
+      }
+      @media (max-width: 600px) {
+        min-width: 75vw;
+      }
+      
     }
 
     &:not(.active) {
